Enhance Vercel configuration to include server files and improve type safety in Express app

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "buildCommand": "pnpm build:vercel",
   "functions": {
     "api/index.ts": {
-      "includeFiles": "dist/public/**"
+      "includeFiles": [
+        "dist/public/**",
+        "server/**"
+      ]
     }
   },
   "routes": [
