--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "buildCommand": "pnpm build:vercel",
   "functions": {
     "api/index.ts": {
-      "includeFiles": [
-        "dist/public/**",
-        "server/**"
-      ]
+      "includeFiles": "dist/public/**"
     }
   },
   "routes": [
